--- a/anchor/programs/curd/Cargo.toml
+++ b/anchor/programs/curd/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "counter"
+name = "curd"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "counter"
+name = "curd"
 
 [features]
 default = []
 cpi = ["no-entrypoint"]
-no-entrypoint = []
+no-entrypoint = [] 
 no-idl = []
 no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
