--- a/package.json
+++ b/package.json
@@ -61,8 +61,20 @@
     "@solana/wallet-adapter-react": "0.15.39",
     "@solana/wallet-adapter-react-ui": "0.9.39",
     "@solana/web3.js": "^1.98.4",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.89.0",
+    "@tiptap/extension-blockquote": "^3.10.7",
+    "@tiptap/extension-bold": "^3.10.7",
+    "@tiptap/extension-bullet-list": "^3.10.7",
+    "@tiptap/extension-code": "^3.10.7",
+    "@tiptap/extension-code-block": "^3.10.7",
+    "@tiptap/extension-heading": "^3.10.7",
+    "@tiptap/extension-horizontal-rule": "^3.10.7",
     "@tiptap/extension-image": "^3.10.5",
+    "@tiptap/extension-italic": "^3.10.7",
+    "@tiptap/extension-list-item": "^3.10.7",
+    "@tiptap/extension-ordered-list": "^3.10.7",
+    "@tiptap/extension-strike": "^3.10.7",
     "@tiptap/react": "^3.10.5",
     "@tiptap/starter-kit": "^3.10.5",
     "class-variance-authority": "^0.7.1",
@@ -76,7 +88,9 @@
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
+    "phaser": "^3.90.0",
     "pinata": "^2.5.1",
+    "pixi.js": "^7.4.3",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
