--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/declare-winner",
-      "schedule": "0 0 * * *",
-      "headers": {
-        "x-cron-secret": "${process.env.CRON_SECRET}"
-      }
+      "schedule": "0 0 * * *"
     }
   ]
 }
