--- a/anchor/Anchor.toml
+++ b/anchor/Anchor.toml
@@ -6,14 +6,14 @@ anchor_version = "0.31.1"
 resolution = true
 skip-lint = false
 
-[programs.localnet]
-counter = "Czns8AgxFTeEwn7JdKuXXUv2oW3SdYwGNDs7Z52tZjpg"
+[programs.devnet]
+counter = "FpsfKtSsRGMnZBWd6mF3yVQdpWWJx5btjygt8YNAUTj3"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
