--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@tiptap/extension-list-item": "^3.10.7",
     "@tiptap/extension-ordered-list": "^3.10.7",
     "@tiptap/extension-strike": "^3.10.7",
+    "@tiptap/extensions": "^3.11.1",
     "@tiptap/react": "^3.10.5",
     "@tiptap/starter-kit": "^3.10.5",
     "class-variance-authority": "^0.7.1",
