--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "input-otp": "^1.4.2",
     "jotai": "^2.14.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "phaser": "^3.90.0",
     "pinata": "^2.5.1",
